Update GHA WORKFLOW

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,7 +3,7 @@ name: 'SWM GitHub Actions Basic'
 on: push
 
 env:
-  WORKFLOW_LEVEL: "This value comes from the WORKFLOW level"
+  GLOBAL_LEVEL: 'GLOBAL VALUE'
 
 jobs:
   first-job:
@@ -12,43 +12,25 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      JOB_LEVEL: "This value comes from the JOB level"
+      JOB_LEVEL_1: 'JOB LEVEL VALUE 1'
 
     steps:
-    - name: Say Hello World
-      shell: bash
-      run: |
-        echo "Hello World"
-
-    - name: Check environment variables 1
+    - name: Say Hello World 1
       shell: bash
       env:
-        STEP_LEVEL_1: "This value comes from the STEP level 1"
+        STEP_LEVEL_1: 'STEP LEVEL VALUE 1'
       run: |
-        echo "workflow level: $WORKFLOW_LEVEL"
-        echo "job level: $JOB_LEVEL"
-        echo "step level 1: $STEP_LEVEL_1"
-        echo "step level 2: $STEP_LEVEL_2"
-        echo "step level 3: $STEP_LEVEL_3"
+        echo "Hello World from step 1"
 
-    - name: Check environment variables 2
+        randomValue = "swm$(echo $RANDOM)"
+
+        echo "STEP_VALUE=$randomValue" >> $GITHUB_ENV
+
+    - name: Say Hello World 2
       shell: pwsh
       env:
-        STEP_LEVEL_2: "This value comes from the STEP level 2"
+        STEP_LEVEL_2: 'STEP LEVEL VALUE 2'
       run: |
-        echo "workflow level: $env:WORKFLOW_LEVEL"
-        echo "job level: $env:JOB_LEVEL"
-        echo "step level 1: $env:STEP_LEVEL_1"
-        echo "step level 2: $env:STEP_LEVEL_2"
-        echo "step level 3: $env:STEP_LEVEL_3"
+        echo "Hello World from step 2"
 
-    - name: Check environment variables 3
-      shell: bash
-      env:
-        STEP_LEVEL_3: "This value comes from the STEP level 3"
-      run: |
-        echo "workflow level: ${{ env.WORKFLOW_LEVEL }}"
-        echo "job level: ${{ env.JOB_LEVEL }}"
-        echo "step level 1: ${{ env.STEP_LEVEL_1 }}"
-        echo "step level 2: ${{ env.STEP_LEVEL_2 }}"
-        echo "step level 3: ${{ env.STEP_LEVEL_3 }}"
+        echo "STEP_VALUE: ${{ env.STEP_VALUE }}"
