Update GHA Workflow

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,6 +16,7 @@ jobs:
 
     steps:
     - name: Say Hello World 1
+      id: helloworld1
       shell: bash
       env:
         STEP_LEVEL_1: 'STEP LEVEL VALUE 1'
@@ -24,7 +25,7 @@ jobs:
 
         randomValue="swm$(echo $RANDOM)"
 
-        echo "STEP_VALUE=$randomValue" >> $GITHUB_ENV
+        echo "STEP_VALUE=$randomValue" >> $GITHUB_OUTPUT
 
     - name: Say Hello World 2
       shell: pwsh
@@ -33,4 +34,4 @@ jobs:
       run: |
         echo "Hello World from step 2"
 
-        echo "STEP_VALUE: ${{ env.STEP_VALUE }}"
+        echo "STEP_VALUE: ${{ steps.helloworld1.outputs.STEP_VALUE }}"
