--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,6 +25,8 @@ jobs:
 
         randomValue="swm$(echo $RANDOM)"
 
+        echo "::add-mask::$randomValue"
+
         echo "STEP_VALUE=$randomValue" >> $GITHUB_OUTPUT
 
     - name: Say Hello World 2
@@ -35,3 +37,5 @@ jobs:
         echo "Hello World from step 2"
 
         echo "STEP_VALUE: ${{ steps.helloworld1.outputs.STEP_VALUE }}"
+
+        echo "API_KEY: ${{ secrets.API_KEY }}"
