Update GHA Workflow

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,33 +9,18 @@ jobs:
   first-job:
     name: 'First Job'
 
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ 'ubuntu-latest', 'windows-latest', 'macos-latest']
+
+    runs-on: ${{ matrix.os }}
 
     env:
       JOB_LEVEL_1: 'JOB LEVEL VALUE 1'
 
     steps:
     - name: Say Hello World 1
-      id: helloworld1
       shell: bash
-      env:
-        STEP_LEVEL_1: 'STEP LEVEL VALUE 1'
+
       run: |
-        echo "Hello World from step 1"
-
-        randomValue="swm$(echo $RANDOM)"
-
-        echo "::add-mask::$randomValue"
-
-        echo "STEP_VALUE=$randomValue" >> $GITHUB_OUTPUT
-
-    - name: Say Hello World 2
-      shell: pwsh
-      env:
-        STEP_LEVEL_2: 'STEP LEVEL VALUE 2'
-      run: |
-        echo "Hello World from step 2"
-
-        echo "STEP_VALUE: ${{ steps.helloworld1.outputs.STEP_VALUE }}"
-
-        echo "API_KEY: ${{ secrets.API_KEY }}"
+        echo "OS: ${{ matrix.os }}"
