--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,6 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ 'ubuntu-latest', 'windows-latest', 'macos-latest']
+        nodejs: [ '16', '18' ]
 
     runs-on: ${{ matrix.os }}
 
@@ -24,3 +25,4 @@ jobs:
 
       run: |
         echo "OS: ${{ matrix.os }}"
+        echo "nodejs version: ${{ matrix.nodejs }}"
