--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,7 +20,16 @@ jobs:
       JOB_LEVEL_1: 'JOB LEVEL VALUE 1'
 
     steps:
-    - name: Say Hello World 1
+    - name: Say Hello World 1 - {{ matrix.os }}
+      shell: bash
+
+      run: |
+        echo "OS: ${{ matrix.os }}"
+        echo "nodejs version: ${{ matrix.nodejs }}"
+
+    steps:
+    - name: Say Hello World 2 - {{ matrix.os }}
+      if: matrix.os != 'windows-latest'
       shell: bash
 
       run: |
