--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,6 +29,7 @@ jobs:
 
     steps:
     - name: Say Hello World 2 - ${{ matrix.os }}
+      if: matrix.os != 'windows-latest'
       shell: bash
 
       run: |
