Update GHA Workflow

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,69 +9,16 @@ jobs:
     runs-on: 'ubuntu-latest'
 
     steps:
-    - name: Say Hello World 1
+    - name: Send a message to Webex Space
       shell: bash
 
       run: |
-        echo "Hello World"
+        cur -X POST https://webexapis.com/v1/messages \
+          -H "Authorization: Bearer ${{ secrets.WEBEX_TOKEN }}" \
+          -H "Content-type: application/json" \
+          -d "{
+            "roomId": "${{ secrets.WEBEX_ROOMID }}",
+            "text": "메시지입니다 - FROM GITHUB 액션"
+          }"
 
-  deploy-dev:
-    name: 'Deploy to dev'
-
-    needs:
-      - build-test
-    
-    runs-on: 'ubuntu-latest'
-
-    steps:
-    - name: Say Hello World 1
-      shell: bash
-
-      run: |
-        echo "Hello World"
-
-  deploy-staging1:
-    name: 'Deploy to staging 1'
-
-    needs:
-      - deploy-dev
-    
-    runs-on: 'ubuntu-latest'
-
-    steps:
-    - name: Say Hello World 1
-      shell: bash
-
-      run: |
-        echo "Hello World"
-
-  deploy-staging2:
-    name: 'Deploy to staging 2'
-
-    needs:
-      - deploy-dev
-    
-    runs-on: 'ubuntu-latest'
-
-    steps:
-    - name: Say Hello World 1
-      shell: bash
-
-      run: |
-        echo "Hello World"
-
-  deploy-prod:
-    name: 'Deploy to prod'
-
-    needs:
-      - deploy-staging1
-      - deploy-staging2
-    
-    runs-on: 'ubuntu-latest'
-
-    steps:
-    - name: Say Hello World 1
-      shell: bash
-
-      run: |
-        echo "Hello World"
+  
