--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,15 +1,27 @@
-name: Post Message to Webex Room JS Action
+name: 'SWM GitHub Actions Basic'
 
-on: 
-  push:
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+on: push
 
 jobs:
-  webex_message:
-    runs-on: ubuntu-latest
-    name: Send a Webex Notification
+  build-test:
+    name: 'Build & Test'
+
+    runs-on: 'ubuntu-latest'
+
+    steps:
+    - name: Send a message to Webex Space
+      shell: bash
+
+      run: |
+        curl --location --request POST 'https://webexapis.com/v1/messages' \
+          --header 'Authorization: Bearer ${{ secrets.WEBEX_TOKEN }}' \
+          --header 'Content-type: application/json' \
+          --data-raw '{
+            "roomId": "${{ secrets.WEBEX_ROOMID }}",
+            "text": "메시지입니다 - FROM GITHUB 액션"
+          }'
+
+    - name: Send a Webex Notification
     steps:
       - name: Post Message to Webex Room
         uses: chrivand/action-webex-js@main
@@ -18,4 +30,10 @@ jobs:
           WEBEX_ROOM_ID: ${{ secrets.WEBEX_ROOMID }}
           MARKDOWN_MESSAGE: "**Hello, world! You just ran an action from ${{ github.repository }}.**"
 
-  
+    - name: Send message from custom action to Webex
+      uses: .github/actions@mains
+      with:
+        webexToken: ${{ secrets.WEBEX_TOKEN }}
+        webexRoomId: ${{ secrets.WEBEX_ROOMID }}
+        bodyText: 'Message sent by Github Actions from ${{ github.repository }}'
+        bodyMarkdown: '**Hello, world! You just ran an action from ${{ github.repository }}.**'
