--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,6 +9,9 @@ jobs:
     runs-on: 'ubuntu-latest'
 
     steps:
+    - name: Checkout codes
+      uses: actions/checkout@v3
+      
     - name: Send a message to Webex Space
       shell: bash
 
@@ -21,7 +24,7 @@ jobs:
             "text": "메시지입니다 - FROM GITHUB 액션"
           }'
 
-    name: Send a Webex Notification
+    - name: Send a Webex Notification
     steps:
       - name: Post Message to Webex Room
         uses: chrivand/action-webex-js@main
